--- a/airtomaintain/springcloud/configserver/src/main/resources/application.yml
+++ b/airtomaintain/springcloud/configserver/src/main/resources/application.yml
@@ -1,2 +1,37 @@
+spring:
+   application:
+      name: "maintenaceConfigServer"
+   profiles:
+      #active: native
+      active: git
+   cloud:
+      config:
+         server:
+            #native:
+               #search-locations: "classpath:/config"
+               #search-locations: "file:///Users//senthilvinayahammurugan//Documents//config"
+            git:
+               uri: "https://github.com/senvinayaham/aircraft-microservice-configs.git"
+               default-lable: main
+               timeout: 5
+               clone-on-start: true
+               force-pull: true
+   rabbitmq:
+      host: "localhost"
+      post: 5672
+      username: "guest"
+      password: "guest"
+
+management:
+   endpoints:
+      web:
+         exposure:
+            include: "*"
+               
+encrypt:
+   key: "QO1E7ADEDS"
+
 server:
    port: 8071
+   
+  
