--- a/airtomaintain/springcloud/partsandtools/src/main/resources/application.yml
+++ b/airtomaintain/springcloud/partsandtools/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
    port: 8080
 spring:
+   application:
+      name: "partsandtools"
+   profiles:
+      active: "prod"
    datasource:
       url: jdbc:h2:mem:testdb
       driverClassName: org.h2.Driver
@@ -14,3 +18,17 @@ spring:
       hibernate:
          ddl-auto: update
       show-sql: true
+   config:
+      import: "optional:configserver:http://localhost:8071/"
+
+   rabbitmq:
+      host: "localhost"
+      post: 5672
+      username: "guest"
+      password: "guest"
+      
+management:
+   endpoints:
+      web:
+         exposure:
+            include: "*"
