--- a/airtomaintain/springcloud/configserver/src/main/resources/application.yml
+++ b/airtomaintain/springcloud/configserver/src/main/resources/application.yml
@@ -16,17 +16,26 @@ spring:
                timeout: 5
                clone-on-start: true
                force-pull: true
-   rabbitmq:
-      host: "localhost"
-      post: 5672
-      username: "guest"
-      password: "guest"
+   #rabbitmq:
+    #  host: "localhost"
+     # post: 5672
+      #username: "guest"
+      #password: "guest"
 
 management:
    endpoints:
       web:
          exposure:
             include: "*"
+   health:
+      readiness-state:
+         enabled: true
+      liveness-state:
+         enabled: true
+   endpoint:
+      health:
+         probes:
+            enabled: true
                
 encrypt:
    key: "QO1E7ADEDS"
