--- a/airtomaintain/springcloud/partsandtools/pom.xml
+++ b/airtomaintain/springcloud/partsandtools/pom.xml
@@ -8,12 +8,12 @@
 		<version>3.2.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.airtomaintain</groupId>
-	<artifactId>maintenance</artifactId>
+	<groupId>com.aircraft.maintenance</groupId>
+	<artifactId>partsandtools</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>maintenance</name>
-	<description>Aircraft Maintenance</description>
+	<name>partsandtools</name>
+	<description>Parts and Tools for Aircraft Maintenance</description>
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2023.0.0</spring-cloud.version>
@@ -40,10 +40,10 @@
       		<groupId>org.springframework.cloud</groupId>
       		<artifactId>spring-cloud-starter-config</artifactId>
     	</dependency>
-   		<dependency>
+   	<!--	<dependency>
       		<groupId>org.springframework.cloud</groupId>
       		<artifactId>spring-cloud-starter-bus-amqp</artifactId>
-    	</dependency>    	
+    	</dependency>-->    	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
@@ -61,9 +61,14 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency> -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency> -->
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -112,7 +117,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>senvinayaham/${project.artifactId}:PartsTools</name>
+						<name>senvinayaham/${project.artifactId}:MaintenanceMySQL</name>
 					</image>
 					<excludes>
 						<exclude>
@@ -128,7 +133,7 @@
 				<version>3.3.2</version>
 				<configuration>
 				    <to>
-					<image>senvinayaham/${project.artifactId}:PartsTools-JIB</image>
+					<image>senvinayaham/${project.artifactId}:Maintenance-JIB</image>
 					</to>
 				</configuration>
 			</plugin>
