Eureka server update

--- a/airtomaintain/springcloud/configserver/pom.xml
+++ b/airtomaintain/springcloud/configserver/pom.xml
@@ -59,7 +59,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>senvinayaham/${project.artifactId}:MaintenanceMySQL</name>
+						<name>senvinayaham/${project.artifactId}:WithEureka</name>
 					</image>
 					<excludes>
 						<exclude>
