--- a/airtomaintain/springcloud/eurekaserver/pom.xml
+++ b/airtomaintain/springcloud/eurekaserver/pom.xml
@@ -54,6 +54,27 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<image>
+						<name>senvinayaham/${project.artifactId}:WithEureka</name>
+					</image>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.3.2</version>
+				<configuration>
+				    <to>
+					<image>senvinayaham/${project.artifactId}:Maintenance-JIB</image>
+					</to>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
