--- a/airtomaintain/springcloud/docker-compose/prod/docker-compose.yml
+++ b/airtomaintain/springcloud/docker-compose/prod/docker-compose.yml
@@ -1,31 +1,31 @@
 services:
    
    
-   rabbit:
-      image: rabbitmq:3.12-management
-      hostname: rabbitmq
-      ports:
-         - "5672:5672"
-         - "15672:15672"
-      healthcheck:
-         test: rabbitmq-diagnostics check_port_connectivity
-         interval: 10s
-         timeout: 5s
-         retries: 10
-         start_period: 5s
-      extends:
-         file: common-config.yml
-         service: network-deploy-service        
+   #rabbit:
+    #  image: rabbitmq:3.12-management
+     # hostname: rabbitmq
+      #ports:
+       #  - "5672:5672"
+        # - "15672:15672"
+      #healthcheck:
+       #  test: rabbitmq-diagnostics check_port_connectivity
+        # interval: 10s
+         #timeout: 5s
+         #retries: 10
+         #start_period: 5s
+      #extends:
+       #  file: common-config.yml
+        # service: network-deploy-service        
    
    
    configserver:
-      image: "senvinayaham/configserver:Maintenance"
+      image: "senvinayaham/configserver:WithEureka"
       container_name: configserver-ms
       ports:
          - "8071:8071"
-      depends_on:
-         rabbit:
-            condition: "service_healthy"   
+  #    depends_on:
+   #      rabbit:
+    #        condition: "service_healthy"   
       healthcheck:
          test: "curl --fail --silent localhost:8071/actuator/health/readiness | grep UP || exit 1"
          interval: 10s
@@ -37,18 +37,60 @@ services:
          service: microservice-base-config
    
    
-   partsandtools:
-      image: "senvinayaham/partsandtools:Maintenance"
-      container_name: partsandtools-ms
+   eurekaserver:
+      image: "senvinayaham/eurekaserver:WithEureka"
+      container_name: eurekaserver-ms
       ports:
-         - "8080:8080"
+         - "8070:8070"
+  #    depends_on:
+   #      rabbit:
+    #        condition: "service_healthy"   
+      healthcheck:
+         test: "curl --fail --silent localhost:8070/actuator/health/readiness | grep UP || exit 1"
+         interval: 10s
+         timeout: 5s
+         retries: 10
+         start_period: 10s
       depends_on:
          configserver:
-            condition: "service_healthy"
+            condition: service_healthy   
       extends:
          file: common-config.yml
          service: microservice-configserver-config
+      environment:
+         SPRING_APPLICATION_NAME: "eurekaserver" 
+   
+   partsandtools:
+      image: "senvinayaham/partsandtools:WithEureka"
+      container_name: partsandtools-ms
+      ports:
+         - "8080:8080"
+      extends:
+         file: common-config.yml
+         service: microservice-eureka-config
+      environment:
+         SPRING_APPLICATION_NAME: "partsandtools"   
+      depends_on:
+         configserver:
+            condition: service_healthy
+         eurekaserver:
+            condition: service_healthy            
 
+   cards:
+      image: "senvinayaham/cards:WithEureka"
+      container_name: cards-ms
+      ports:
+         - "8081:8080"
+      extends:
+         file: common-config.yml
+         service: microservice-eureka-config
+      environment:
+         SPRING_APPLICATION_NAME: "cards" 
+      depends_on:
+         configserver:
+            condition: service_healthy
+         eurekaserver:
+            condition: service_healthy   
 
 networks:
    aircraftmaintenance:
