--- a/airtomaintain/springcloud/maintenancecards/src/main/resources/application.yml
+++ b/airtomaintain/springcloud/maintenancecards/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-   port: 8080
+   port: 8081
 spring:
    application:
       name: "cards"
@@ -9,7 +9,7 @@ spring:
       #url: jdbc:mysql://localhost:3306/cardsdb
       #username: root
       #password: root
-      url: jdbc:h2:mem:testdb
+      url: jdbc:h2:mem:maintenancecardsdb
       driverClassName: org.h2.Driver
       username: sa
       password: ''
@@ -38,3 +38,28 @@ management:
       web:
          exposure:
             include: "*"
+   endpoint:
+      shutdown:
+         enabled: true
+   info:
+      env:
+         enabled: true
+endpoints:
+   shutdown:
+      enabled: true
+
+eureka:
+   instance:
+      perferIpAddress: true 
+   client:
+      fetchRegistry: true
+      registerWithEureka: true
+      serviceUrl:
+         defaultZone: http://localhost:8070/eureka/
+         
+info:
+    app:
+       name: "cards"
+       description: "Task and Work Cards Application for Aircraft Maintenace"
+       version: "1.0.0"        
+                                     
