--- a/airtomaintain/springcloud/partsandtools/pom.xml
+++ b/airtomaintain/springcloud/partsandtools/pom.xml
@@ -40,6 +40,14 @@
       		<groupId>org.springframework.cloud</groupId>
       		<artifactId>spring-cloud-starter-config</artifactId>
     	</dependency>
+   	    <dependency>
+      		<groupId>org.springframework.cloud</groupId>
+      		<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    	</dependency>
+    	<dependency>
+      		<groupId>org.springframework.cloud</groupId>
+    	  	<artifactId>spring-cloud-starter-openfeign</artifactId>
+	    </dependency>
    	<!--	<dependency>
       		<groupId>org.springframework.cloud</groupId>
       		<artifactId>spring-cloud-starter-bus-amqp</artifactId>
@@ -117,7 +125,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>senvinayaham/${project.artifactId}:MaintenanceH2</name>
+						<name>senvinayaham/${project.artifactId}:WithEureka</name>
 					</image>
 					<excludes>
 						<exclude>
