--- a/airtomaintain/springcloud/partsandtools/src/main/resources/application.yml
+++ b/airtomaintain/springcloud/partsandtools/src/main/resources/application.yml
@@ -38,3 +38,28 @@ management:
       web:
          exposure:
             include: "*"
+   endpoint:
+      shutdown:
+         enabled: true
+   info:
+      env:
+         enabled: true
+endpoints:
+   shutdown:
+      enabled: true
+
+eureka:
+   instance:
+      perferIpAddress: true 
+   client:
+      fetchRegistry: true
+      registerWithEureka: true
+      serviceUrl:
+         defaultZone: http://localhost:8070/eureka/
+         
+info:
+    app:
+       name: "partsandtools"
+       description: "Parts and Tools Application for Aircraft Maintenace"
+       version: "1.0.0"        
+                              
