--- a/airtomaintain/springcloud/configserver/src/main/resources/config/cards.yml
+++ b/airtomaintain/springcloud/configserver/src/main/resources/config/cards.yml
@@ -3,8 +3,8 @@ build:
    version: "3.0"
    
    
-partsandtools:
-   message: "Contact Details for Parts and Tools Team for any support issues"
+cards:
+   message: "Contact Details for cards Team for any support issues"
    contactDetails:
       name: "SenthilVinayaham"
       email: "senthilvinayaham@gmail.com"
