--- a/airtomaintain/springcloud/docker-compose/default/common-config.yml
+++ b/airtomaintain/springcloud/docker-compose/default/common-config.yml
@@ -14,16 +14,16 @@ services:
       #environment:
        #  SPRING_RABBITMQ_HOST: "rabbit"            
 
-   microservice-eureka-config:
-      extends:
-         service: microservice-configserver-config
-      environment:
-         EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
-
    microservice-configserver-config:
       extends:
          service: microservice-base-config
       environment:
-         SPRING_CONFIG_IMPORT: "configserver:http://configserver:8071/"
          SPRING_PROFILES_ACTIVE: default
-         EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: "http://eurekaserver:8070/eureka/"                                    
+         EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: "http://configserver:8071/"       
+
+   microservice-eureka-config:
+      extends:
+         service: microservice-configserver-config
+      environment:
+         EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: "http://eurekaserver:8070/eureka/"
+                             
