--- a/airtomaintain/springcloud/eurekaserver/pom.xml
+++ b/airtomaintain/springcloud/eurekaserver/pom.xml
@@ -56,7 +56,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>senvinayaham/${project.artifactId}:WithEureka</name>
+						<name>senvinayaham/${project.artifactId}:WithAPIGateway</name>
 					</image>
 					<excludes>
 						<exclude>
