--- a/airtomaintain/springcloud/apigateway/src/main/resources/application.yml
+++ b/airtomaintain/springcloud/apigateway/src/main/resources/application.yml
@@ -13,7 +13,16 @@ spring:
             locator:
                enabled: false
                lowerCaseServiceId: true
-   
+         httpclient:
+            connect-timeout: 1000
+            response-timeout: 5s   
+   data:
+      redis:
+         connect-timeout: 1000
+         host: localhost
+         port: 6379
+         timeout: 1s
+            
 management:
    endpoints:
       web:
@@ -37,4 +46,16 @@ logging:
       com:
          aircraft:
             maintenance:
-               apigateway: DEBUG                                     
+               apigateway: DEBUG
+resilience4j.circuitbreaker:
+   configs:
+      default:
+         slidingWindowSize: 10
+         permittedNumberOfCallsInHalfOpenState: 2
+         failureRateThreshold: 50
+         
+         
+         
+         
+         
+         waitDurationInOpenState: 10000                                     
