--- a/airtomaintain/springcloud/maintenancecards/pom.xml
+++ b/airtomaintain/springcloud/maintenancecards/pom.xml
@@ -90,6 +90,10 @@
       		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
       		<version>2.4.0</version>
    		</dependency>
+   		<dependency>
+      		<groupId>org.springframework.cloud</groupId>
+      		<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+   		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
