--- a/airtomaintain/springcloud/docker-compose/prod/docker-compose.yml
+++ b/airtomaintain/springcloud/docker-compose/prod/docker-compose.yml
@@ -1,6 +1,17 @@
 services:
    
-   
+   keycloak:
+      image: quay.io/keycloak/keycloak:24.0.2
+      container_name: magical_jackson
+      ports:
+         - "7080:8080"
+      environment:
+         KEYCLOAK_ADMIN: "admin"
+         KEYCLOAK_ADMIN_PASSWORD: "admin"
+      command: "start-dev"
+      extends:
+         file: common-config.yml
+         service: network-deploy-service         
    #rabbit:
     #  image: rabbitmq:3.12-management
      # hostname: rabbitmq
@@ -106,14 +117,12 @@ services:
    
    apigateway:
       image: "senvinayaham/apigateway:WithAPIGateway"
-      container_name: cards-ms
+      container_name: apigateway-ms
       ports:
          - "8072:8072"
       extends:
          file: common-config.yml
          service: microservice-eureka-config
-      environment:
-         SPRING_APPLICATION_NAME: "apigateway" 
       depends_on:
          configserver:
             condition: service_healthy
@@ -123,6 +132,10 @@ services:
             condition: service_healthy
          cards:
             condition: service_healthy
+      environment:
+         SPRING_APPLICATION_NAME: "apigateway"
+         OTEL_SERVICE_NAME: "gatwayserver"
+         SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK-SET-URI: "http://keycloak:8080/realms/master/protocol/openid-connect/certs"
 
 networks:
    aircraftmaintenance:
