--- a/airtomaintain/springcloud/maintenancecards/src/main/resources/application.yml
+++ b/airtomaintain/springcloud/maintenancecards/src/main/resources/application.yml
@@ -27,15 +27,26 @@ spring:
    config:
       import: "optional:configserver:http://localhost:8071/"
 
-   #rabbitmq:
-    #  host: "localhost"
-     # post: 5672
-     # username: "guest"
-     # password: "guest"
+   rabbitmq:
+      host: "localhost"
+      post: 5672
+      username: "guest"
+      password: "guest"
+      connection-timeout: 10s
    cloud:
       openfeign:
          circuitbreaker:
-            enabled: true         
+            enabled: true  
+      function:
+         definition: updateCommunication       
+      stream:
+         bindings:
+            updateCommunication-in-0:
+               destination: communication-sent
+               group: ${spring.application.name} 
+            sendCommounication-out-0:
+               destination: send-communication
+                           
 management:
    endpoints:
       web:
