--- a/airtomaintain/springcloud/maintenancecards/pom.xml
+++ b/airtomaintain/springcloud/maintenancecards/pom.xml
@@ -48,7 +48,18 @@
       		<groupId>org.springframework.cloud</groupId>
     	  	<artifactId>spring-cloud-starter-openfeign</artifactId>
 	    </dependency>
-    	
+    	<!--<dependency>
+      		<groupId>org.springframework.cloud</groupId>
+    	  	<artifactId>spring-cloud-stream-binder-kafka</artifactId>
+	    </dependency>-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+		</dependency>		        	
    	<!--<dependency>
       		<groupId>org.springframework.cloud</groupId>
       		<artifactId>spring-cloud-starter-bus-amqp</artifactId>
