--- a/airtomaintain/springcloud/maintenancecards/src/main/resources/application.yml
+++ b/airtomaintain/springcloud/maintenancecards/src/main/resources/application.yml
@@ -27,12 +27,12 @@ spring:
    config:
       import: "optional:configserver:http://localhost:8071/"
 
-   rabbitmq:
-      host: "localhost"
-      post: 5672
-      username: "guest"
-      password: "guest"
-      connection-timeout: 10s
+  # rabbitmq:
+   #   host: "localhost"
+    #  post: 5672
+     # username: "guest"
+     # password: "guest"
+      #connection-timeout: 10s
    cloud:
       openfeign:
          circuitbreaker:
@@ -46,6 +46,10 @@ spring:
                group: ${spring.application.name} 
             sendCommounication-out-0:
                destination: send-communication
+         kafka:
+            binder:
+               brokers:
+                  - localhost:9092
                            
 management:
    endpoints:
