Helm chart implementation for all the services

--- a/airtomaintain/springcloud/helm/aircraftmaintenance-services/apigatway/values.yaml
+++ b/airtomaintain/springcloud/helm/aircraftmaintenance-services/apigatway/values.yaml
@@ -1,28 +1,28 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-deploymentName: cards-deployment
-serviceName: cards
-appLabel: cards
-appName: cards
+deploymentName: apigateway-deployment
+serviceName: apigateway
+appLabel: apigateway
+appName: apigateway
 
 replicaCount: 1
 
 image:
-  repository: aircraftmaintenance/cards
+  repository: aircraftmaintenance/apigateway
   tag: maintenance
 
-containerPort: 9000
+containerPort: 8072
 
 service:
-  type: ClusterIP
-  port: 9000
-  targetPort: 9000
+  type: LoadBalancer
+  port: 8072
+  targetPort: 8072
 
 appname_enabled: true
 profile_enabled: true
 config_enabled: true
 eureka_enabled: true
-resouceserver_enabled: false
+resouceserver_enabled: true
 otel_enabled: false
 kafka_enabled: false
