Implemented Prometheus with Grafana

--- a/airtomaintain/springcloud/configserver/src/main/resources/application.yml
+++ b/airtomaintain/springcloud/configserver/src/main/resources/application.yml
@@ -36,7 +36,9 @@ management:
       health:
          probes:
             enabled: true
-               
+   metrics:
+      tags:
+         application: ${spring.application.name}                
 encrypt:
    key: "QO1E7ADEDS"
 
