--- a/airtomaintain/springcloud/apigateway/src/main/resources/application.yml
+++ b/airtomaintain/springcloud/apigateway/src/main/resources/application.yml
@@ -40,7 +40,9 @@ management:
    info:
       env:
          enabled: true
-       
+   metrics:
+      tags:
+         application: ${spring.application.name}        
 info:
     app:
        name: "apigateway"
