--- a/airtomaintain/springcloud/docker-compose/default/docker-compose.yml
+++ b/airtomaintain/springcloud/docker-compose/default/docker-compose.yml
@@ -79,6 +79,17 @@ services:
       file: common-config.yml
       service: network-deploy-service
 
+   prometheus:
+    image: prom/prometheus:2.51.2
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ../observability/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
    grafana:
     image: grafana/grafana:latest
     environment:
@@ -107,6 +118,9 @@ services:
         /run.sh
     ports:
       - "3000:3000"
+    volumes:
+      - ../observability/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
+       
     healthcheck:
       test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3000/api/health || exit 1" ]
       interval: 10s
