--- a/airtomaintain/springcloud/eurekaserver/src/main/resources/application.yml
+++ b/airtomaintain/springcloud/eurekaserver/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+   port: 8070
 spring:
    application:
       name: "eurekaserver"
@@ -17,4 +19,7 @@ management:
    endpoint:
       health:
          probes:
-            enabled: true      
+            enabled: true
+   metrics:
+      tags:
+         application: ${spring.application.name}                   
