Added Tempo and OTEL

--- a/airtomaintain/springcloud/maintenancecards/src/main/resources/application.yml
+++ b/airtomaintain/springcloud/maintenancecards/src/main/resources/application.yml
@@ -100,7 +100,9 @@ logging:
       com:
          aircraft:
             maintenance:
-               cars: DEBUG  
+               cars: DEBUG
+   pattern:
+      level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"                 
 resilience4j.circuitbreaker:
    configs:
       default:
