--- a/airtomaintain/springcloud/partsandtools/src/main/resources/application.yml
+++ b/airtomaintain/springcloud/partsandtools/src/main/resources/application.yml
@@ -80,4 +80,5 @@ logging:
          aircraft:
             maintenance:
                partsandtools: DEBUG    
-                              
+   pattern:
+      level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"                                   
