--- a/airtomaintain/springcloud/apigateway/src/main/resources/application.yml
+++ b/airtomaintain/springcloud/apigateway/src/main/resources/application.yml
@@ -55,6 +55,9 @@ logging:
          aircraft:
             maintenance:
                apigateway: DEBUG
+   pattern:
+      level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"     
+                     
 resilience4j.circuitbreaker:
    configs:
       default:
