--- a/airtomaintain/springcloud/docker-compose/default/common-config.yml
+++ b/airtomaintain/springcloud/docker-compose/default/common-config.yml
@@ -12,7 +12,11 @@ services:
             limits:
                memory: 700m
       #environment:
-       #  SPRING_RABBITMQ_HOST: "rabbit"            
+       #  SPRING_RABBITMQ_HOST: "rabbit"
+      environment:
+         JAVA_TOOL_OPTIONS: "-javaagent:/app/libs/opentelemetry-javaagent-1.32.0.jar"
+         OTEL_EXPORTER_OTLP_ENDPOINT: http://tempo:4317
+         OTEL_METRICS_EXPORTER: none                   
 
    microservice-configserver-config:
       extends:
