--- a/airtomaintain/springcloud/docker-compose/default/docker-compose.yml
+++ b/airtomaintain/springcloud/docker-compose/default/docker-compose.yml
@@ -90,6 +90,19 @@ services:
       file: common-config.yml
       service: network-deploy-service
 
+   tempo:
+      image: grafana/tempo
+      container_name: tempo
+      command: -config.file /etc/tempo-config.yml
+      ports:
+         - "3110:3100"
+         - "4317:4317"
+      volumes:
+         - ../observability/tempo/tempo.yml:/etc/tempo-config.yml
+      extends:
+         file: common-config.yml
+         service: network-deploy-service
+
    grafana:
     image: grafana/grafana:latest
     environment:
@@ -193,9 +206,9 @@ services:
       - "3100:3100"
     healthcheck:
       test: ["CMD", "service", "nginx", "status"]
-      interval: 10s
+      interval: 20s
       timeout: 5s
-      retries: 5
+      retries: 10
     extends:
       file: common-config.yml
       service: network-deploy-service
@@ -239,14 +252,15 @@ services:
     #        condition: "service_healthy"   
       healthcheck:
          test: "curl --fail --silent localhost:8071/actuator/health/readiness | grep UP || exit 1"
-         interval: 10s
+         interval: 20s
          timeout: 5s
-         retries: 10
+         retries: 20
          start_period: 10s
       extends:
          file: common-config.yml
          service: microservice-base-config
-   
+      environment:
+         OTEL_SERVICE_NAME: "configserver"   
    
    eurekaserver:
       image: "senvinayaham/eurekaserver:WithAPIGateway"
@@ -258,9 +272,9 @@ services:
     #        condition: "service_healthy"   
       healthcheck:
          test: "curl --fail --silent localhost:8070/actuator/health/readiness | grep UP || exit 1"
-         interval: 10s
+         interval: 20s
          timeout: 5s
-         retries: 10
+         retries: 20
          start_period: 10s
       depends_on:
          configserver:
@@ -270,7 +284,7 @@ services:
          service: microservice-configserver-config
       environment:
          SPRING_APPLICATION_NAME: "eurekaserver" 
-   
+         OTEL_SERVICE_NAME: "eurekaserver"   
    partsandtools:
       image: "senvinayaham/partsandtools:WithAPIGateway"
       container_name: partsandtools-ms
@@ -278,15 +292,16 @@ services:
          - "8080:8080"
       healthcheck:
          test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
-         interval: 10s
+         interval: 20s
          timeout: 5s
-         retries: 10
+         retries: 20
          start_period: 10s         
       extends:
          file: common-config.yml
          service: microservice-eureka-config
       environment:
-         SPRING_APPLICATION_NAME: "partsandtools"   
+         SPRING_APPLICATION_NAME: "partsandtools"  
+         OTEL_SERVICE_NAME: "partsandtools"  
       depends_on:
          configserver:
             condition: service_healthy
@@ -300,15 +315,16 @@ services:
          - "8081:8080"
       healthcheck:
          test: "curl --fail --silent localhost:8081/actuator/health/readiness | grep UP || exit 1"
-         interval: 10s
+         interval: 20s
          timeout: 5s
-         retries: 10
+         retries: 20
          start_period: 10s         
       extends:
          file: common-config.yml
          service: microservice-eureka-config
       environment:
          SPRING_APPLICATION_NAME: "cards" 
+         OTEL_SERVICE_NAME: "cards"  
       depends_on:
          configserver:
             condition: service_healthy
