--- a/airtomaintain/springcloud/docker-compose/prod/docker-compose.yml
+++ b/airtomaintain/springcloud/docker-compose/prod/docker-compose.yml
@@ -1,4 +1,217 @@
 services:
+
+   read:
+    image: grafana/loki:2.9.2
+    command: "-config.file=/etc/loki/config.yaml -target=read"
+    ports:
+      - 3101:3100
+      - 7946
+      - 9095
+    volumes:
+      - ../observability/loki/loki-config.yaml:/etc/loki/config.yaml
+    depends_on:
+      - minio
+    healthcheck:
+      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks: &loki-dns
+      aircraftmaintenance:
+        aliases:
+          - loki
+
+   write:
+    image: grafana/loki:2.9.2
+    command: "-config.file=/etc/loki/config.yaml -target=write"
+    ports:
+      - 3102:3100
+      - 7946
+      - 9095
+    volumes:
+      - ../observability/loki/loki-config.yaml:/etc/loki/config.yaml
+    healthcheck:
+      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    depends_on:
+      - minio
+    networks:
+      <<: *loki-dns
+
+   promtail:
+    image: grafana/promtail:2.9.2
+    volumes:
+      - ../observability/promtail/promtail-local-config.yaml:/etc/promtail/config.yaml:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: -config.file=/etc/promtail/config.yaml
+    depends_on:
+      - gateway
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
+   minio:
+    image: minio/minio
+    entrypoint:
+      - sh
+      - -euc
+      - |
+        mkdir -p /data/loki-data && \
+        mkdir -p /data/loki-ruler && \
+        minio server /data
+    environment:
+      - MINIO_ROOT_USER=loki
+      - MINIO_ROOT_PASSWORD=supersecret
+      - MINIO_PROMETHEUS_AUTH_TYPE=public
+      - MINIO_UPDATE=off
+    ports:
+      - 9000
+    volumes:
+      - ./.data/minio:/data
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
+      interval: 15s
+      timeout: 20s
+      retries: 5
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
+   prometheus:
+    image: prom/prometheus:2.51.2
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ../observability/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
+   tempo:
+      image: grafana/tempo
+      container_name: tempo
+      command: -config.file /etc/tempo-config.yml
+      ports:
+         - "3110:3100"
+         - "4317:4317"
+      volumes:
+         - ../observability/tempo/tempo.yml:/etc/tempo-config.yml
+      extends:
+         file: common-config.yml
+         service: network-deploy-service
+
+   grafana:
+    image: grafana/grafana:latest
+    environment:
+      - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+    depends_on:
+      - gateway
+    entrypoint:
+      - sh
+      - -euc
+      - |
+        mkdir -p /etc/grafana/provisioning/datasources
+        cat <<EOF > /etc/grafana/provisioning/datasources/ds.yaml
+        apiVersion: 1
+        datasources:
+          - name: Loki
+            type: loki
+            access: proxy
+            url: http://gateway:3100
+            jsonData:
+              httpHeaderName1: "X-Scope-OrgID"
+            secureJsonData:
+              httpHeaderValue1: "tenant1"
+        EOF
+        /run.sh
+    ports:
+      - "3000:3000"
+    volumes:
+      - ../observability/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
+       
+    healthcheck:
+      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3000/api/health || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
+   gateway:
+    image: nginx:latest
+    depends_on:
+      - read
+      - write
+    entrypoint:
+      - sh
+      - -euc
+      - |
+        cat <<EOF > /etc/nginx/nginx.conf
+        user  nginx;
+        worker_processes  5;  ## Default: 1
+
+        events {
+          worker_connections   1000;
+        }
+
+        http {
+          resolver 127.0.0.11;
+
+          server {
+            listen             3100;
+
+            location = / {
+              return 200 'OK';
+              auth_basic off;
+            }
+
+            location = /api/prom/push {
+              proxy_pass       http://write:3100\$$request_uri;
+            }
+
+            location = /api/prom/tail {
+              proxy_pass       http://read:3100\$$request_uri;
+              proxy_set_header Upgrade \$$http_upgrade;
+              proxy_set_header Connection "upgrade";
+            }
+
+            location ~ /api/prom/.* {
+              proxy_pass       http://read:3100\$$request_uri;
+            }
+
+            location = /loki/api/v1/push {
+              proxy_pass       http://write:3100\$$request_uri;
+            }
+
+            location = /loki/api/v1/tail {
+              proxy_pass       http://read:3100\$$request_uri;
+              proxy_set_header Upgrade \$$http_upgrade;
+              proxy_set_header Connection "upgrade";
+            }
+
+            location ~ /loki/api/.* {
+              proxy_pass       http://read:3100\$$request_uri;
+            }
+          }
+        }
+        EOF
+        /docker-entrypoint.sh nginx -g "daemon off;"
+    ports:
+      - "3100:3100"
+    healthcheck:
+      test: ["CMD", "service", "nginx", "status"]
+      interval: 20s
+      timeout: 5s
+      retries: 10
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
    
    keycloak:
       image: quay.io/keycloak/keycloak:24.0.2
@@ -39,14 +252,15 @@ services:
     #        condition: "service_healthy"   
       healthcheck:
          test: "curl --fail --silent localhost:8071/actuator/health/readiness | grep UP || exit 1"
-         interval: 10s
+         interval: 20s
          timeout: 5s
-         retries: 10
+         retries: 20
          start_period: 10s
       extends:
          file: common-config.yml
          service: microservice-base-config
-   
+      environment:
+         OTEL_SERVICE_NAME: "configserver"   
    
    eurekaserver:
       image: "senvinayaham/eurekaserver:WithAPIGateway"
@@ -58,9 +272,9 @@ services:
     #        condition: "service_healthy"   
       healthcheck:
          test: "curl --fail --silent localhost:8070/actuator/health/readiness | grep UP || exit 1"
-         interval: 10s
+         interval: 20s
          timeout: 5s
-         retries: 10
+         retries: 20
          start_period: 10s
       depends_on:
          configserver:
@@ -70,7 +284,7 @@ services:
          service: microservice-configserver-config
       environment:
          SPRING_APPLICATION_NAME: "eurekaserver" 
-   
+         OTEL_SERVICE_NAME: "eurekaserver"   
    partsandtools:
       image: "senvinayaham/partsandtools:WithAPIGateway"
       container_name: partsandtools-ms
@@ -78,15 +292,16 @@ services:
          - "8080:8080"
       healthcheck:
          test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
-         interval: 10s
+         interval: 20s
          timeout: 5s
-         retries: 10
+         retries: 20
          start_period: 10s         
       extends:
          file: common-config.yml
          service: microservice-eureka-config
       environment:
-         SPRING_APPLICATION_NAME: "partsandtools"   
+         SPRING_APPLICATION_NAME: "partsandtools"  
+         OTEL_SERVICE_NAME: "partsandtools"  
       depends_on:
          configserver:
             condition: service_healthy
@@ -100,15 +315,16 @@ services:
          - "8081:8080"
       healthcheck:
          test: "curl --fail --silent localhost:8081/actuator/health/readiness | grep UP || exit 1"
-         interval: 10s
+         interval: 20s
          timeout: 5s
-         retries: 10
+         retries: 20
          start_period: 10s         
       extends:
          file: common-config.yml
          service: microservice-eureka-config
       environment:
          SPRING_APPLICATION_NAME: "cards" 
+         OTEL_SERVICE_NAME: "cards"  
       depends_on:
          configserver:
             condition: service_healthy
